Fix alternate logins align

--- a/core/css/guest.css
+++ b/core/css/guest.css
@@ -99,7 +99,6 @@ body {
 }
 
 .wrapper {
-	width: 100%;
 	max-width: 700px;
 	margin-top: 10vh;
 }
